app/assets/stylesheets/application.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "toastr_rails";

.user-listing-reservation {
  border-bottom: groove
}

.avatar-small {
  width: 28px;
}

.avatar-medium {
  width: 48px;
}

.avatar-large {
  width: 68px;
}

.avatar-full {
	width: 100%;
}

.message-container .container {
  width: 80%;
}

.wide {
  width: 100%;
}

.conversation-name {
  padding-top: 10px;
  padding-bottom: 10px;
  font-weight: bold;
}

th {
  width: 30px;
  height: 50px;
}

body {
	padding-top: 61px;
  padding-bottom: 40px;
  /* Margin bottom by footer height */
  margin-bottom: 60px;
  background-color: #eee;
}

html {
  position: relative;
  min-height: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 80%;
  /* Set the fixed height of the footer here */
  height: 60px;
}

.tagging {
	padding-top: 20px;
  padding-bottom: 20px;
}

nav {
	padding-top: 5px;
}

#term {
  padding: 4.5px;
  width: 236px;
}

.form-style {
  padding: 15px;
  margin: 0 auto;
}

.form-style .field {
  position: relative;
  height: auto;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  font-size: 15px;
}

.form-style .field:focus {
  z-index: 2;
}

.form-style input[type="text"] {
  padding: 10px;
  height: 42px;
  margin-bottom: 10px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.form-style .field .input-group {
  margin-bottom: 10px;
}

.form-style input[type="email"] {
  padding: 10px;
  height: 42px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.form-style input[type="password"] {
  padding: 10px;
  height: 42px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.form-style input[type="file"] {
  height: 42px;
  margin-top: 5px;
  margin-bottom: 5px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.form-style input[type="number"] {
  width: 190px;
  padding: 5px;
  height: 42px;
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.form-style textarea {
  padding: 10px;
  height: 100px;
  width: 190px;
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.form-style select {
  width: 190px;
  height: 42px;
  margin-top: 5px;
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  background-color: white;
}

.listing-header-wrapper {
  border-bottom: groove;
}

.listing-header-wrapper .host-intro {
  margin-top: 10px;
  font-size: 20px;
}

.listing-header-wrapper .host-details {
  font-size: 30px;
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.listing-header-wrapper .list-intro {
  margin-top: 10px;
  font-size: 20px;
}

.listing-header-wrapper .list-description {
  font-size: 20px;
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  word-wrap: break-word;
}

.price-style {
  padding-top: 20px;
  font-size: 20px;
  position: absolute;
}

@media only screen and (max-width: 1199px) {
  .price-style span {
    font-weight: bold;
    font-size: 20px;
    color: #777777;
    position: absolute;
    right: 2px;
  }
}

@media only screen and (min-width: 1200px) {
  .price-style span {
    font-weight: bold;
    font-size: 20px;
    color: #777777;
    position: absolute;
    right: 2px;
  }
}

@media only screen and (max-width: 991px) { 
  .price-style {
    padding-top: 20px;
    font-size: 20px;
    position: static;
  }

  .price-style span {
    font-weight: bold;
    font-size: 20px;
    color: #777777;
    position: absolute;
    right: 538px;
  }
}

@media only screen and (max-width: 767px) {
  .price-style span {
    font-weight: bold;
    font-size: 20px;
    color: #777777;
    position: absolute;
    right: 555px;
  }
}

.comment-box {
  border-bottom: ridge;
}

.digg_pagination {
  background: #eee;
  cursor: default;
  /* self-clearing method: */ }
  .digg_pagination a, .digg_pagination span, .digg_pagination em {
    padding: 0.2em 0.5em;
    display: block;
    float: left;
    margin-right: 1px; }
  .digg_pagination .disabled {
    color: #999999;
    border: 1px solid #dddddd; }
  .digg_pagination .current {
    font-style: normal;
    font-weight: bold;
    background: #2e6ab1;
    color: white;
    border: 1px solid #2e6ab1; }
  .digg_pagination a {
    text-decoration: none;
    color: #105cb6;
    border: 1px solid #9aafe5; }
    .digg_pagination a:hover, .digg_pagination a:focus {
      color: #000033;
      border-color: #000033; }
  .digg_pagination .page_info {
    background: #2e6ab1;
    color: white;
    padding: 0.4em 0.6em;
    width: 22em;
    margin-bottom: 0.3em;
    text-align: center; }
    .digg_pagination .page_info b {
      color: #000033;
      background: #6aa6ed;
      padding: 0.1em 0.25em; }
  .digg_pagination:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  * html .digg_pagination {
    height: 1%; }
  *:first-child + html .digg_pagination {
    overflow: hidden; }

.apple_pagination {
  background: #f1f1f1;
  border: 1px solid #e5e5e5;
  text-align: center;
  padding: 1em;
  cursor: default; }
  .apple_pagination a, .apple_pagination span {
    padding: 0.2em 0.3em; }
  .apple_pagination .disabled {
    color: #aaaaaa; }
  .apple_pagination .current {
    font-style: normal;
    font-weight: bold;
    background-color: #bebebe;
    display: inline-block;
    width: 1.4em;
    height: 1.4em;
    line-height: 1.5;
    -moz-border-radius: 1em;
    -webkit-border-radius: 1em;
    border-radius: 1em;
    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
  .apple_pagination a {
    text-decoration: none;
    color: black; }
    .apple_pagination a:hover, .apple_pagination a:focus {
      text-decoration: underline; }

.flickr_pagination {
  text-align: center;
  padding: 0.3em;
  cursor: default; }
  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
    padding: 0.2em 0.5em; }
  .flickr_pagination .disabled {
    color: #aaaaaa; }
  .flickr_pagination .current {
    font-style: normal;
    font-weight: bold;
    color: #ff0084; }
  .flickr_pagination a {
    border: 1px solid #dddddd;
    color: #0063dc;
    text-decoration: none; }
    .flickr_pagination a:hover, .flickr_pagination a:focus {
      border-color: #003366;
      background: #0063dc;
      color: white; }
  .flickr_pagination .page_info {
    color: #aaaaaa;
    padding-top: 0.8em; }
  .flickr_pagination .previous_page, .flickr_pagination .next_page {
    border-width: 2px; }
  .flickr_pagination .previous_page {
    margin-right: 1em; }
  .flickr_pagination .next_page {
    margin-left: 1em; }

